data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_1961.wast
;; 2. **Operand Stack Mismanagement in Block with Unreachable**:    Create a block where stack operations mismatch the blocktype, including `unreachable` inside the block if the stack height changes unexpectedly. It checks if `wizard_engine` mishandles stack behaviors leading to an `unreachable`.     ```wasm    block (result i32)       i32.const 42       i64.const 0       br 0       unreachable    end    ```     **Constraint**: This test validates the operand stack behavior, ensuring correct stack manipulation according to blocktype expectations to prevent reaching `unreachable`.

(assert_invalid
  (module (func $test-block-operand-stack-mismanagement (result i32)
    (block (result i32)
      i32.const 42
      i64.const 0
      br 0
      unreachable
    end)
  ))
  "type mismatch"
)